# financial-agent

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.codex/: instructions.md  main-reference.md
backend/: .env.example  fix_mypy.sh
backend/app/: __init__.py  config.py  db.py  graph.py  main.py  models.py  portfolio_parser.py  portfolio_service.py  schemas.py
backend/app/agents/: simple_tool_agent.py
backend/data/: chat_sessions.json
backend/tests/: conftest.py  test_agent_graph.py  test_briefing.py  test_chat.py  test_chat_endpoint.py  test_chat_sessions.py  test_compare.py  test_config.py  test_deep_research.py  test_graph.py  test_groq_live.py  test_portfolio_api.py  test_portfolio_endpoints.py  test_portfolio_parser.py  test_pre_mvp_api.py  test_reactive_chat_refactor.py  test_simple_tool_agent.py
docs/: AGENT_GRAPH_CONTRACT.md  API_CONTRACT.md  CHANGES.md  DB_SCHEMA.md  DEEP_RESEARCH.md  DEEP_RESEARCH_IMPLEMENTATION_STAGES.md  DOMAIN_MODELS.md  FIGMA.md  FRONTEND_DESIGN_SPEC.md  FRONTEND_UX_CONTRACT.md  High_Level_Overview.md  MVP_PLAN.md  NON_GOALS.md  PRINCIPLES.md  SPRINT_PLAN.md  TEST_MATRIX.md  TOOLKIT_EXPANSION_PLAN_FINAL.md  problem-statement.md
experiments/: plot_hist.py
frontend/: index.html  package-lock.json  package.json  patch_app.cjs  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  BriefingZone.tsx  PortfolioZone.tsx  SettingsZone.tsx  figma-styles.css  main.tsx  models.ts  styles.css
frontend/tests/: helpers.test.mjs
sample_imports/: history.json  holdings.csv  sample_portfolio.csv  tradebook-LYT474-EQ.csv
(+113 files in other folders)
