[project]
name = "scale-finance-agent"
version = "0.1.0"
description = "Portfolio-aware investment intelligence agent"
authors = [{name = "Pranjal"}]
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi[standard]>=0.115,<1.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "python-multipart>=0.0.9,<1.0",
    "langgraph>=0.2,<1.0",
    "langchain>=0.3,<1.0",
    "langchain-core>=0.3,<1.0",
    "langchain-groq>=0.2,<1.0",
    "langchain-ollama>=0.2,<1.0",
    "langchain-chroma>=0.1,<1.0",
    "langchain-community>=0.3,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.30,<1.0",
    "alembic>=1.13,<2.0",
    "chromadb>=0.5,<1.0",
    "yfinance>=0.2,<1.0",
    "httpx>=0.27,<1.0",
    "tenacity>=9.0,<10.0",
    "matplotlib>=3.11.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.6,<1.0",
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["backend"]
testpaths = ["backend/tests"]
